--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
         "prod": "mix --production"
     },
     "devDependencies": {
+        "@types/react": "^18.0.12",
+        "@types/react-dom": "^18.0.5",
         "axios": "^0.25",
         "laravel-mix": "^6.0.6",
-        "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "ts-loader": "^9.3.0",
+        "typescript": "^4.7.3"
     }
 }
