--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "devDependencies": {
         "@types/react": "^18.0.12",
         "@types/react-dom": "^18.0.5",
+        "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/parser": "^5.28.0",
         "axios": "^0.25",
+        "eslint": "^8.17.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-hooks": "^4.6.0",
         "laravel-mix": "^6.0.6",
         "postcss": "^8.1.14",
+        "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "ts-loader": "^9.3.0",
