--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
         "watch": "mix watch",
         "watch-poll": "mix watch -- --watch-options-poll=1000",
         "hot": "mix watch --hot",
-        "prod": "mix --production"
+        "prod": "mix --production",
+        "lint": "eslint --fix resources/ts/**/*.{ts,tsx}",
+        "fmt": "prettier --write resources/ts/**/*.{ts,tsx}",
+        "stylelint": "stylelint --fix resources/**/*.css"
     },
     "devDependencies": {
         "@types/react": "^18.0.12",
@@ -15,6 +18,7 @@
         "axios": "^0.25",
         "eslint": "^8.17.0",
         "eslint-config-prettier": "^8.5.0",
+        "eslint-config-standard": "^17.0.0",
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.6.0",
         "laravel-mix": "^6.0.6",
@@ -22,6 +26,9 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "stylelint": "^14.9.1",
+        "stylelint-config-recess-order": "^3.0.0",
+        "stylelint-config-standard": "^26.0.0",
         "ts-loader": "^9.3.0",
         "typescript": "^4.7.3"
     }
