--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "stylelint": "stylelint --fix resources/**/*.css"
     },
     "devDependencies": {
+        "@types/jest": "^28.1.1",
         "@types/react": "^18.0.12",
         "@types/react-dom": "^18.0.5",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
@@ -21,6 +22,7 @@
         "eslint-config-standard": "^17.0.0",
         "eslint-plugin-react": "^7.30.0",
         "eslint-plugin-react-hooks": "^4.6.0",
+        "jest": "^28.1.1",
         "laravel-mix": "^6.0.6",
         "postcss": "^8.1.14",
         "prettier": "^2.7.1",
@@ -29,6 +31,7 @@
         "stylelint": "^14.9.1",
         "stylelint-config-recess-order": "^3.0.0",
         "stylelint-config-standard": "^26.0.0",
+        "ts-jest": "^28.0.5",
         "ts-loader": "^9.3.0",
         "typescript": "^4.7.3"
     }
