--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
             - dev
         depends_on:
             - mariadb
+
     mariadb:
         image: mariadb:10.3
         container_name: mariadb_laravel
@@ -21,14 +22,13 @@ services:
             - 3306:3306
         environment:
             MYSQL_ROOT_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ROOT_HOST: "%"
             MYSQL_DATABASE: '${DB_DATABASE}'
             MYSQL_USER: '${DB_USERNAME}'
             MYSQL_PASSWORD: '${DB_PASSWORD}'
-            MYSQL_ALLOW_EMPTY_PASSWORD: 1
             TZ: 'Asia/Tokyo'
         volumes:
             - ./docker/mariadb/data:/var/lib/mysql
+            - ./docker/mariadb/log:/var/log/mysql
             - ./docker/mariadb/my.cnf:/etc/mysql/conf.d/my.cnf
         networks:
             - dev
@@ -36,6 +36,7 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
+
     adminer:
         container_name: adminer
         image: adminer:4.8.1
