--- a/docker/mariadb/my.cnf
+++ b/docker/mariadb/my.cnf
@@ -8,4 +8,4 @@ default-character-set=utf8mb4
 character-set-server=utf8mb4
 collation-server=utf8mb4_bin
 explicit_defaults_for_timestamp = true
-log-error=error.log
+log-error=/var/log/mysql/error.log
