--- a/docker/php_apache/php.ini
+++ b/docker/php_apache/php.ini
@@ -3,3 +3,8 @@ date.timezone = "Asia/Tokyo"
 [mbstring]
 mbstring.internal_encoding = "UTF-8"
 mbstring.language = "Japanese"
+[XDebug]
+xdebug.mode = debug
+xdebug.start_with_request = yes
+xdebug.client_host = 172.17.0.1
+xdebug.client_port = 9003
