--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "test": "jest"
     },
     "devDependencies": {
+        "@reduxjs/toolkit": "^1.8.2",
         "@types/jest": "^28.1.1",
         "@types/react": "^18.0.12",
         "@types/react-dom": "^18.0.5",
+        "@types/react-redux": "^7.1.24",
         "@typescript-eslint/eslint-plugin": "^5.28.0",
         "@typescript-eslint/parser": "^5.28.0",
         "axios": "^0.25",
@@ -29,6 +31,7 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-redux": "^8.0.2",
         "stylelint": "^14.9.1",
         "stylelint-config-recess-order": "^3.0.0",
         "stylelint-config-standard": "^26.0.0",
