--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "prettier": "^2.7.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.32.2",
         "react-redux": "^8.0.2",
         "stylelint": "^14.9.1",
         "stylelint-config-recess-order": "^3.0.0",
